# homework_22

./: .env.example  README.md  catalog_fixture.json  pyproject.toml
blog/: admin.py  urls.py
blog/migrations/: 0001_initial.py
blog/templates/blog/includes/: inc_menu.html
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/management/commands/: add_products.py
catalog/migrations/: 0001_initial.py  0002_alter_product_image.py
catalog/templates/: add_product.html  base.html  contacts.html  product_detail.html  product_list.html
catalog/templates/catalog/: base.html  contacts.html  product_delete_confirm.html  product_form.html
catalog/templates/catalog/includes/: inc_menu.html
catalog/templates/includes/: inc_menu.html
catalog/templatetags/: my_tags.py
config/: asgi.py  settings.py  urls.py
